--- a/css/flappy.css
+++ b/css/flappy.css
@@ -61,3 +61,39 @@
     font-size: 70px;
     z-index: 100;
 }
+
+.menu {
+    position: absolute;
+    left: 40%;
+    bottom: 30%;
+    width: 20%;
+    height: 42%;
+    background-color: #ccc;
+    border: 2px solid black;
+    border-radius: 20px;
+    box-shadow: 2px 3px 2px black;
+    opacity: 90%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu h1 {
+    font-size: 30px;
+    color: #333;
+    margin: 0;
+}
+
+.menu form {
+    display: flex;
+    flex-direction: column;
+    margin-top: 5px;
+    color: #222;
+}
+
+
+
+form .botao {
+    margin-top: 15px;
+}
